# WEB_HW_7

./: my_select.py  pyproject.toml  seed.py
migration/versions/: 957e47048ae6_init.py  ff2b8f3491a6_init.py
